<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MovieCatalogue</string>

    <!-- main activity -->
    <string name="main_activity_title">Catalogue</string>
    <string name="tab_layout_movie">Movies Playing Now</string>
    <string name="tab_layout_tv_show">TV Shows Airing Today</string>
    <string name="movie_listing">Movie Listing</string>
    <string name="tv_show_listing">TV Show Listing</string>
    <string name="api_data_failure">Failed to acquire data through the API!</string>
    <string name="searchview_query_hint">Find a show using its name here…</string>

    <!-- movie item & details -->
    <string name="tv_movie_title_placeholder">Movie Title</string>
    <string name="tv_movie_release_date_placeholder">June 3, 2019</string>
    <string name="tv_movie_details_title_placeholder">Title</string>
    <string name="tv_movie_details_release_date_placeholder">Release Date</string>

    <!-- tv show item & details -->
    <string name="tv_tv_show_name_placeholder">TV Show Name</string>
    <string name="tv_tv_show_first_air_date_placeholder">June 3, 2019</string>
    <string name="tv_tv_show_details_name_placeholder">Name</string>
    <string name="tv_tv_show_details_first_air_date_placeholder">First Air Date</string>

    <!-- details activity -->
    <string name="details_activity_title">Details</string>
    <string name="tv_details_score_id">Score</string>
    <string name="tv_details_score_placeholder">9.00 (900 votes)</string>
    <plurals name="tv_score">
        <item quantity="one"> (%d vote)</item>
        <item quantity="other"> (%d votes)</item>
    </plurals>
    <string name="tv_details_overview_placeholder" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="details_favorite_confirmation_message">Are you sure you want to add this to your favorites list?</string>
    <string name="details_favorite_confirmation_yes">Yes</string>
    <string name="details_favorite_confirmation_no">No</string>
    <string name="details_favorite_added">This has been added to your favorites list!</string>

    <!-- language fragment -->
    <string name="language_fragment_title">Languages</string>
    <string name="language_options_en">English</string>
    <string name="language_options_in">Indonesian</string>
    <string name="btn_language_choose">Choose</string>
    <string name="btn_language_close">Close</string>
    <string name="language_message_currently_used">This is the currently used language!</string>
    <string name="language_message_chosen">Successfully changed the application\'s language!</string>

    <!-- reminder fragment & notifications -->
    <string name="reminder_fragment_title">Reminder</string>
    <string name="switch_reminder_daily">Daily</string>
    <string name="switch_reminder_new_releases">Newest</string>
    <string name="btn_reminder_save">Save</string>
    <string name="btn_reminder_close">Close</string>
    <string name="reminder_message_saved">Successfully saved the reminder settings!</string>

    <string name="reminder_notification_daily_title">Daily Catalogue Reminder</string>
    <string name="reminder_notification_daily_message">Have you checked out the catalogue today?</string>
    <string name="reminder_notification_newest_title">Newest Movies Reminder</string>
    <string name="reminder_notification_newest_message">Movie release(s) today: %d</string>

    <!-- reminder technicalities -->
    <string name="reminder_daily_request_code" translatable="false">100</string>
    <string name="reminder_daily_hour_of_day" translatable="false">7</string>
    <string name="reminder_daily_minute" translatable="false">0</string>
    <string name="reminder_daily_second" translatable="false">5</string>

    <string name="reminder_newest_request_code" translatable="false">101</string>
    <string name="reminder_newest_hour_of_day" translatable="false">8</string>
    <string name="reminder_newest_minute" translatable="false">0</string>
    <string name="reminder_newest_second" translatable="false">5</string>

    <string name="reminder_receiver_request_code_id" translatable="false">code</string>

    <string name="reminder_notification_daily_id" translatable="false">210</string>
    <string name="reminder_notification_daily_channel_id" translatable="false">DailyChannel</string>
    <string name="reminder_notification_daily_channel_name" translatable="false">Daily Reminder Channel</string>
    <string name="reminder_notification_newest_id" translatable="false">211</string>
    <string name="reminder_notification_newest_channel_id" translatable="false">NewestChannel</string>
    <string name="reminder_notification_newest_channel_name" translatable="false">Newest Reminder Channel</string>

    <!-- favorites activity -->
    <string name="favorites_activity_title">Favorites</string>
    <string name="tab_layout_fav_movie">Movies</string>
    <string name="tab_layout_fav_tv_show">TV Shows</string>
    <string name="fav_movie_listing">Favorite Movies</string>
    <string name="fav_tv_show_listing">Favorite TV Shows</string>
    <string name="favorites_delete_confirmation_message">Are you sure you want to delete this from your favorites list?</string>
    <string name="favorites_delete_confirmation_yes">Yes</string>
    <string name="favorites_delete_confirmation_no">No</string>
    <string name="favorites_delete_deleted">The entry has been deleted from your favorites list!</string>

    <!-- menu -->
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_language">Language</string>
    <string name="menu_reminder">Reminder</string>

    <!-- widgets -->
    <string name="favorite_movies_widget_id">Favorite Movies</string>
    <string name="favorite_tv_shows_widget_id">Favorite TV Shows</string>
    <string name="favorite_show_id_placeholder">Show A</string>
    <string name="favorites_widget_no_data">No shows yet!</string>

    <!-- shared preferences -->
    <string name="shared_preferences_reminder" translatable="false">reminder_pref</string>
    <string name="shared_preferences_reminder_daily" translatable="false">daily</string>
    <string name="shared_preferences_reminder_newest" translatable="false">newest</string>
</resources>
